--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
+    "material-design-icons-iconfont": "^5.0.1",
+    "vee-validate": "^3.2.5",
+    "vue-axios": "^2.1.5",
+    "vue-img-inputer": "^2.1.6",
+    "vuedraggable": "^2.23.2",
+    "vuetify": "^2.2.11",
+    "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "^4.3.0",
