--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.1",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.3",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
     "material-design-icons-iconfont": "^5.0.1",
+    "node-sass": "^4.14.1",
     "vee-validate": "^3.2.5",
+    "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-class-component": "^7.2.3",
     "vue-img-inputer": "^2.1.6",
+    "vue-property-decorator": "^8.4.1",
+    "vue-router": "^3.1.6",
     "vuedraggable": "^2.23.2",
     "vuetify": "^2.2.11",
+    "vuex": "^3.1.3",
     "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
@@ -29,7 +30,13 @@
     "@vue/cli-plugin-vuex": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
     "typescript": "~3.8.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "node-sass": "~4.14.1",
+    "@vue/test-utils": "^1.0.2",
+    "jest": "^26.0.1",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vuetify-loader": "^1.3.0"
   },
   "browserslist": [
     "> 1%",
