--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "@vue/cli-plugin-typescript": "^4.3.0",
     "@vue/cli-plugin-vuex": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
-    "typescript": "~3.8.3",
-    "vue-template-compiler": "^2.6.11",
-    "node-sass": "~4.14.1",
     "@vue/test-utils": "^1.0.2",
     "jest": "^26.0.1",
+    "node-sass": "~4.14.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "typescript": "~3.8.3",
+    "vue-cli-plugin-vuetify": "^2.0.5",
+    "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   },
   "browserslist": [
