--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.152",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
@@ -32,6 +33,9 @@
     "@vue/cli-plugin-vuex": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
     "@vue/test-utils": "^1.0.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^26.0.1",
     "jest": "^26.0.1",
     "node-sass": "~4.14.1",
     "sass": "^1.19.0",
@@ -39,10 +43,7 @@
     "typescript": "~3.8.3",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^26.0.1"
+    "vuetify-loader": "^1.3.0"
   },
   "browserslist": [
     "> 1%",
