--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "serve": "vue-cli-service serve",
     "local-serve": "vue-cli-service serve --mode local",
     "prod-build": "vue-cli-service build --mode production",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.10.0",
     "@types/lodash": "^4.14.152",
     "@types/vuedraggable": "^2.23.1",
     "axios": "^0.19.2",
+    "babel-loader": "7",
+    "babel-preset-env": "^1.7.0",
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
     "material-design-icons-iconfont": "^5.0.1",
@@ -33,8 +37,8 @@
     "@vue/cli-plugin-typescript": "^4.3.0",
     "@vue/cli-plugin-vuex": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
-    "@vue/test-utils": "^1.0.2",
-    "babel-core": "^7.0.0-bridge.0",
+    "@vue/test-utils": "^1.0.3",
+    "babel-core": "^7.0.0-0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.0.1",
     "jest": "^26.0.1",
@@ -43,6 +47,7 @@
     "sass-loader": "^8.0.0",
     "typescript": "~3.8.3",
     "vue-cli-plugin-vuetify": "^2.0.5",
+    "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
   },
@@ -50,5 +55,19 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "vue-jest",
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    }
+  },
+  "moduleNameMapper": {
+    "^@/(.*)$": "<rootDir>/src/$1"
+  }
 }
