--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.10.0",
     "@types/lodash": "^4.14.152",
     "@types/vuedraggable": "^2.23.1",
+    "@vue/composition-api": "^1.0.0-beta.10",
     "axios": "^0.19.2",
     "babel-loader": "7",
     "babel-preset-env": "^1.7.0",
