--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "websocket-extensions": "0.1.4"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@vue/cli-plugin-router": "^4.3.0",
     "@vue/cli-plugin-typescript": "^4.3.0",
     "@vue/cli-plugin-vuex": "^4.3.0",
@@ -47,6 +48,7 @@
     "node-sass": "~4.14.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "ts-jest": "^26.5.5",
     "typescript": "~3.8.3",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-jest": "^3.0.5",
@@ -57,19 +59,5 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "vue"
-    ],
-    "transform": {
-      ".*\\.(vue)$": "vue-jest",
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
-    }
-  },
-  "moduleNameMapper": {
-    "^@/(.*)$": "<rootDir>/src/$1"
-  }
+  ]
 }
