--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "local-serve": "vue-cli-service serve --mode local",
     "prod-build": "vue-cli-service build --mode production",
     "build": "vue-cli-service build",
-    "test": "jest"
+    "test": "jest",
+    "functions-build": "netlify-lambda build src/",
+    "functions-serve": "netlify-lambda serve src/"
   },
   "dependencies": {
     "@babel/preset-env": "^7.10.0",
+    "@types/aws-lambda": "^8.10.77",
     "@types/lodash": "^4.14.152",
     "@types/vuedraggable": "^2.23.1",
     "@vue/composition-api": "^1.0.0-beta.10",
@@ -20,6 +23,7 @@
     "core-js": "^3.6.4",
     "lodash": "^4.17.19",
     "material-design-icons-iconfont": "^5.0.1",
+    "netlify-lambda": "^2.0.10",
     "node-sass": "^4.14.1",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
